--- a/dissertation/dissertation.prelim.tex
+++ b/dissertation/dissertation.prelim.tex
@@ -36,7 +36,7 @@ Chapter~\ref{chap:partI.fractureanimation} is a version (with minor revisions) o
 
 Chapter~\ref{chap:partII.poisson} is a version (with moderate revisions) of ``A Second Order Virtual Node Method for Elliptic Problems with Interfaces and Irregular Domains in Three Dimensions'' by Jeffrey Lee Hellrung,~Jr., Luming Wang, Eftychios Sifakis, and Joseph M.\ Teran (PI) in \textit{Journal of Computational Physics} (231(4):2015--2048, February 2012) (DOI:10.1016/j.jcp.2011.11.023). I wish to thank Jacob Bedrossian and James H.\ von Brecht for their helpful discussions; and Russell Howes and Alexey Stomakhin for submitting typographical errors and providing comments on the later drafts of the publication submission.
 
-Chapter~\ref{chap:partII.LE} is a version (with moderate revisions) of ``A second-order virtual node algorithm for nearly incompressible linear elasticity in irregular domains'' by Yongning Zhu, Yuting Wang, Jeffrey Hellrung, Alejandro Cantarero, Eftychios Sifakis, and Joseph M.\ Teran (PI) (submitted for publication to \textit{Journal of Computational Physics}, 2011).
+Chapter~\ref{chap:partII.LE} is a version (with moderate revisions) of ``A second-order virtual node algorithm for nearly incompressible linear elasticity in irregular domains'' by Yongning Zhu, Yuting Wang, Jeffrey Hellrung, Alejandro Cantarero, Eftychios Sifakis, and Joseph M.\ Teran (PI) (accepted for publication in \textit{Journal of Computational Physics}, 2012).
 }
 
 \vitaitem{2003, summer}{Research Student for Associate Professor Jon T.\ Jacobsen of Harvey Mudd College (Claremont, CA)}
@@ -56,7 +56,7 @@ Chapter~\ref{chap:partII.LE} is a version (with moderate revisions) of ``A secon
 \publication{\textbf{Jeffrey Hellrung}, Andrew Selle, Arthur Shek, Eftychios Sifakis, Joseph Teran. ``Geometric fracture modeling in BOLT.'' \textit{SIGGRAPH 2009:\ Talks}, SIGGRAPH '09, pp.\ 7:1--7:1, New York, NY, USA, 2009. DOI:10.1145/1597990.1597997}
 \publication{Casey L.\ Richardson, Jan Hegemann, Eftychios Sifakis, \textbf{Jeffrey Hellrung}, Joseph M.\ Teran. ``An XFEM method for modeling geometrically elaborate crack propagation in brittle materials.'' \textit{International Journal for Numerical Methods in Engineering}, 88(10):1042--1065, December 2011. DOI:10.1002/nme.3211}
 \publication{\textbf{Jeffrey Lee Hellrung,~Jr.}, Luming Wang, Eftychios Sifakis, Joseph M.\ Teran. ``A Second Order Virtual Node Method for Elliptic Problems with Interfaces and Irregular Domains in Three Dimensions.'' \textit{Journal of Computational Physics}, 231(4):2015--2048, February 2012. DOI:10.1016/j.jcp.2011.11.023}
-\publication{Yongning Zhu, Yuting Wang, \textbf{Jeffrey Hellrung}, Alejandro Cantarero, Eftychios Sifakis, Joseph M.\ Teran. ``A second-order virtual node algorithm for nearly incompressible linear elasticity in irregular domains.'' (submitted for publication, 2011)}
+\publication{Yongning Zhu, Yuting Wang, \textbf{Jeffrey Hellrung}, Alejandro Cantarero, Eftychios Sifakis, Joseph M.\ Teran. ``A second-order virtual node algorithm for nearly incompressible linear elasticity in irregular domains.'' (accepted for publication in \textit{Journal of Computational Physics}, 2012)}
 
 %\presentation{}
 
@@ -73,7 +73,7 @@ Chapter~\ref{chap:partII.LE} is a version (with moderate revisions) of ``A secon
 \award{Google Games Santa Monica - 3$^{rd}$ place (2011)}
 
 \abstract{
-We present a collection of embedded methods to solve a variety of scientific computing problems in both $2$ and $3$ dimensions. Embedded methods make use of a structured background mesh which does not conform to the irregular geometry of the problem, such as the domain boundary. Instead, the irregular geometry is embedded within the structured mesh's elements, providing a framework to solve many problems involving crack propagation, progressive fracturing, dynamic interfaces, and shape optimization.
+We present a collection of embedded methods to solve a variety of scientific computing problems in both $2$ and $3$ dimensions. Embedded methods make use of a structured background mesh which does not conform to the irregular geometry, such as the domain boundary, of the problem. Instead, the irregular geometry is embedded within the structured mesh's elements, providing a framework to solve many problems involving crack propagation, progressive fracturing, dynamic interfaces, and shape optimization.
 
 In Part I, we apply the mesh cutting algorithm of Sifakis et al. \cite{Sifakis07} to investigate the modeling of cracks, surgical incisions, and shattering. Specifically, we present a geometrically flexible and straightforward crack propagation method which combines the \emph{eXtended Finite Element Method} (XFEM) with \cite{Sifakis07} and an innovative integration scheme which makes use of a subordinate quadrature mesh. We also discuss the application of \cite{Sifakis07} and other advances in numerical methods to address the challenges of a virtual surgery simulator. We conclude Part I by describing a system to facilitate the modeling of cracked and shattered objects in the context of visual effects and computer animation.
 
