--- a/dissertation/partII/partII.tex
+++ b/dissertation/partII/partII.tex
@@ -29,7 +29,7 @@ where
 \item the domain $\Omega \subset \bbR^d$ is open ($d = 2 \text{ or } 3$, typically);
 \item the interface $\Gamma$ is a co-dimension one closed curve ($d = 2$) or surface ($d = 3$) that divides $\Omega$ into an interior domain $\Omega^-$ and an exterior domain $\Omega^+$, such that $\Omega = \Omega^- \sqcup \Omega^+ \sqcup \Gamma$;
 \item $u$ (unknown), $\beta$ (known), and $f$ (known) are scalar functions which can exhibit discontinuities across $\Gamma$ but otherwise are assumed to have smooth restrictions $u^{\sigma}$, $\beta^{\sigma}, f^{\sigma}$ to $\Omega^{\sigma}$, $\sigma \in \set{+,-}$;
-\item $\hatn = \hatn(\bfx)$ denotes the outward unit normal, both to $\Omega^-$ for $\bfx \in \Gamma$ and to $\Omega$ for $\bfx \in \dOmega$; and
+\item $\hatn \equiv \hatn(\bfx)$ denotes the outward unit normal, both to $\Omega^-$ for $\bfx \in \Gamma$ and to $\Omega$ for $\bfx \in \dOmega$; and
 \item $\jump{v}(\bfx) := v^+(\bfx) - v^-(\bfx) := \lim_{\epsilon \to 0^+} v\lrp{\bfx + \epsilon \hatn(\bfx)} - \lim_{\epsilon \to 0^+} v\lrp{\bfx - \epsilon \hatn(\bfx)}$ denotes the \emph{jump} of the quantity $v$ across the interface $\Gamma$.
 \end{itemize}
 We note that the relevant physics generally determine the jumps in the solution \eqref{eq:partII.poisson.DJ} and in the flux \eqref{eq:partII.poisson.NJ}, as well as the boundary conditions \eqref{eq:partII.poisson.D}, \eqref{eq:partII.poisson.N} on $\dOmega$.
@@ -83,7 +83,7 @@ In all the above, $\dOmega = \dOmega_d \sqcup \dOmega_n$, and we assume $\Gamma$
 
 Although the use of embedded methods avoids the complexities inherent to unstructured mesh generation, as discussed in the overall Introduction, they do introduce difficulties of their own, though typically of a different and less computationally intensive variety. One prominent such difficulty is the enforcement of algebraic surface conditions (such as boundary conditions or interfacial jump conditions) on embedded features such as $\dOmega$ and $\Gamma$, since the degrees of freedom now do not lie on said embedded features. Our methods employ a Lagrange multiplier space in a relatively straightforward way to weakly enforce Dirichlet boundary conditions and interfacial jump conditions. We mention some alternative techniques in the background sections in the subsequent chapters, and for a good review, see Lew et al. \cite{Lew.Adrian08}.
 
-A further challenge is the retention of higher order accuracy in $L^{\infty}$. The difficulty typically lies in determining the numerical stencils near embedded features that retain the accuracy achieved in the regions of the domain sufficiently distanced from said embedded features. Many present methods address these problems at the cost of implementation complexity and sometimes require significant effort to adapt to general applications. But while achieving higher order accuracy in the discretization may be nontrivial, to reiterate from the overall Introduction, the ability to use a regular Cartesian grid greatly facilitates the implementation of efficient solution techniques. Specifically for high resolution discretizations, direct methods to solve the discrete linear systems become too slow and memory intensive. Geometric multigrid methods and domain decomposition approaches have been shown to provide very favorable performance in this setting. However, their application to embedded discretizations is not entirely straightforward. Ultimately, special attention must be paid near embedded features for both discretization accuracy and efficient numerical linear algebra, as we describe in the subsequent chapters.
+A further challenge is the retention of higher order accuracy in $L^{\infty}$. The difficulty typically lies in determining the numerical stencils near embedded features that retain the accuracy achieved in the regions of the domain sufficiently distanced from embedded features. Many present methods address these problems at the cost of implementation complexity and sometimes require significant effort to adapt to general applications. But while achieving higher order accuracy in the discretization may be nontrivial, to reiterate from the overall Introduction, the ability to use a regular Cartesian grid greatly facilitates the implementation of efficient solution techniques. Specifically for high resolution discretizations, direct methods to solve the discrete linear systems become too slow and memory intensive. Geometric multigrid methods and domain decomposition approaches have been shown to provide very favorable performance in this setting. However, their application to embedded discretizations is not entirely straightforward. Ultimately, special attention must be paid near embedded features for both discretization accuracy and efficient numerical linear algebra, as we describe in the subsequent chapters.
 
 The methods presented in the following chapters build on the work of Bedrossian et al. \cite{Bedrossian10}, which introduced a second order virtual node method for solving the interfacial Poisson problem \eqref{eq:partII.poisson} in $2$ dimensions. The discretization presented in \cite{Bedrossian10} is easy to implement and yields a symmetric positive definite sparse linear system for both interface problems and boundary value problems on irregular domains. In summary, this virtual node method employs a uniform Cartesian grid with duplicated Cartesian bilinear elements along the interface. These duplicated elements introduce additional \emph{virtual} nodes or degrees of freedom to accurately capture the lack of regularity in the solution. The method is variational to define stencils symmetrically, and a different discretization is used depending on proximity to embedded features, allowing for the retention of the standard $5$-point finite difference stencil away from embedded boundaries and interfaces. Langrange multipliers are used to weakly enforce embedded Dirichlet conditions \eqref{eq:partII.poisson.D} and embedded interfacial jump conditions \eqref{eq:partII.poisson.DJ}, and the choice of Lagrange multiplier space admits a symmetric positive definite discretization. In the special case when $\beta$ is smooth, a discontinuity removal technique allows the use of the standard $5$-point Poisson stencil even across the embedded interface.
 
