--- a/resumes/jeffrey.hellrung.programming.tex
+++ b/resumes/jeffrey.hellrung.programming.tex
@@ -65,7 +65,8 @@ Los Angeles, CA \ 90025-5699 \hfill (801) 920-8773
 \begin{minipage}[t]{\CWb\columnwidth}
 \par \textbf{University of California Los Angeles, Los Angeles, CA} \\
 Master of Arts in Mathematics, June 2006 \hfill \textbf{GPA} : 3.909 \\
-Ph.D.\ in Mathematics, June 2012 (expected) \hfill \textbf{GPA} : 3.951%\\
+Ph.D.\ in Mathematics, June 2012 (Adviser: Professor Joseph Teran) \hfill \textbf{GPA} : 3.951 \\
+Dissertation Title: \textit{On Embedded Methods for Crack Propagation, Virtual Surgery, Shattered Objects in Computer Animation, and Elliptic Partial Differential Equations}%\\
 %\textbf{Coursework} : algebraic topology, algorithms, approximation algorithms, asymptotic methods (2 quar), combinatorics (2 quar), complex analysis (2 quar), computational fluid dynamics, computational linear algebra, continuum mechanics, control and optimization, differential equations (3 quar), differential geometry, differential topology, distributed algorithms, Fourier analysis, Lie groups and Lie algebras, numerical analysis (3 quar), real analysis (4 quar), scientific computing
 \vspace{\VS}
 \par \textbf{Harvey Mudd College, Claremont, CA} \hfill \textbf{Overall GPA} : 3.858 \\
@@ -114,7 +115,7 @@ Graduated with High Distinction, Honors in Mathematics %\\
 {\small PUBLICATIONS} &
 \begin{minipage}[t]{\CWb\columnwidth}
 \everypar={\hangindent=\HI}
-\par Yongning Zhu, Yuting Wang, \textbf{Jeffrey Hellrung}, Alejandro Cantarero, Eftychios Sifakis, Joseph M.\ Teran. ``A second-order virtual node algorithm for nearly incompressible linear elasticity in irregular domains.'' (submitted for publication, 2011)
+\par Yongning Zhu, Yuting Wang, \textbf{Jeffrey Hellrung}, Alejandro Cantarero, Eftychios Sifakis, Joseph M.\ Teran. ``A second-order virtual node algorithm for nearly incompressible linear elasticity in irregular domains.'' (accepted for publication in \textit{Journal of Computational Physics}, 2012)
 \par \textbf{Jeffrey Lee Hellrung, Jr.}, Luming Wang, Eftychios Sifakis, Joseph M.\ Teran. ``A Second Order Virtual Node Method for Elliptic Problems with Interfaces and Irregular Domains in Three Dimensions.'' \textit{Journal of Computational Physics}, 231(4):2015--2048, February 2012. DOI:10.1016/j.jcp.2011.11.023
 \par Casey L.\ Richardson, Jan Hegemann, Eftychios Sifakis, \textbf{Jeffrey Hellrung}, Joseph M.\ Teran. ``An XFEM method for modeling geometrically elaborate crack propagation in brittle materials.'' \textit{International Journal for Numerical Methods in Engineering}, 88(10):1042--1065, December 2011. DOI:10.1002/nme.3211
 \par \textbf{Jeffrey Hellrung}, Andrew Selle, Arthur Shek, Eftychios Sifakis, Joseph Teran. ``Geometric fracture modeling in BOLT.'' \textit{SIGGRAPH 2009:\ Talks}, SIGGRAPH '09, pp.\ 7:1--7:1, New York, NY, USA, 2009. DOI:10.1145/1597990.1597997
