Updating resume with new Sandia position and new publication.

--- a/resumes/jeffrey.hellrung.programming.tex
+++ b/resumes/jeffrey.hellrung.programming.tex
@@ -84,6 +84,8 @@ Graduated with High Distinction, Honors in Mathematics %\\
 \begin{tabular}{@{}p{\CWa\columnwidth}@{}p{\CWb\columnwidth}@{}}
 {\small EXPERIENCE} &
 \begin{minipage}[t]{\CWb\columnwidth}
+\par \textbf{Postdoctoral Appointee at Sandia National Laboratories}, Albuquerque, NM; fall 2012.
+\vspace{\VSEX}
 \par \textbf{Teaching Fellow for Department of Mathematics}, UCLA, Los Angeles, CA; 2005 -- 2012. Led discussion sections to review lecture material, tutored at the Student Math Center, prepared review sessions before exams, and held office hours to provide students with additional help. %Classes include Math 32A, 32B, 33A, 33B, 132, 151A, 157, 269A (x3), 269B (x3); PIC 60.
 \vspace{\VSEX}
 \par \textbf{Park City Mathematics Institute}, Park City, UT; summer 2010. Teaching assistant for Professor Joseph Teran's week-long workshop on nonlinear elasticity.
@@ -115,7 +117,7 @@ Graduated with High Distinction, Honors in Mathematics %\\
 {\small PUBLICATIONS} &
 \begin{minipage}[t]{\CWb\columnwidth}
 \everypar={\hangindent=\HI}
-\par Yongning Zhu, Yuting Wang, \textbf{Jeffrey Hellrung}, Alejandro Cantarero, Eftychios Sifakis, Joseph M.\ Teran. ``A second-order virtual node algorithm for nearly incompressible linear elasticity in irregular domains.'' (accepted for publication in \textit{Journal of Computational Physics}, 2012)
+\par Yongning Zhu, Yuting Wang, \textbf{Jeffrey Hellrung}, Alejandro Cantarero, Eftychios Sifakis, Joseph M.\ Teran. ``A second-order virtual node algorithm for nearly incompressible linear elasticity in irregular domains.'' \textit{Journal of Computational Physics}, 231(21):7092--7117, August 2012, DOE:10.1016/j.jcp.2012.05.015
 \par \textbf{Jeffrey Lee Hellrung, Jr.}, Luming Wang, Eftychios Sifakis, Joseph M.\ Teran. ``A Second Order Virtual Node Method for Elliptic Problems with Interfaces and Irregular Domains in Three Dimensions.'' \textit{Journal of Computational Physics}, 231(4):2015--2048, February 2012. DOI:10.1016/j.jcp.2011.11.023
 \par Casey L.\ Richardson, Jan Hegemann, Eftychios Sifakis, \textbf{Jeffrey Hellrung}, Joseph M.\ Teran. ``An XFEM method for modeling geometrically elaborate crack propagation in brittle materials.'' \textit{International Journal for Numerical Methods in Engineering}, 88(10):1042--1065, December 2011. DOI:10.1002/nme.3211
 \par \textbf{Jeffrey Hellrung}, Andrew Selle, Arthur Shek, Eftychios Sifakis, Joseph Teran. ``Geometric fracture modeling in BOLT.'' \textit{SIGGRAPH 2009:\ Talks}, SIGGRAPH '09, pp.\ 7:1--7:1, New York, NY, USA, 2009. DOI:10.1145/1597990.1597997
@@ -130,7 +132,7 @@ Graduated with High Distinction, Honors in Mathematics %\\
 {\small AWARDS} &
 \begin{minipage}[t]{\CWb\columnwidth}
 \everypar={\hangindent=\HI}
-\par ICFP (International Conference on Functional Programming) Programming Contest - $80^{th}$ (of 215 with positive scores, 872 registered) place (2010) and $95^{th}$ (of 199) place (2011)
+\par ICFP (International Conference on Functional Programming) Programming Contest - $80^{th}$ (of 215 with positive scores, 872 registered) place (2010); $95^{th}$ (of 199) place (2011); $84^{th}$ (of 221 in Round 1) and $105^{th}$ (of 117 in Round 2) (2012)
 \par Google Games Santa Monica - $3^{rd}$ place (2011)
 \par VIGRE Fellowship (2005 -- 2009) and Chancellor's Prize (2005 -- 2006) (awarded by UCLA)
 \par Robert Borrelli Clinic Prize for Most Outstanding Clinic Team (awarded by HMC) (2005)
