--- a/resumes/jeffrey.hellrung.tex
+++ b/resumes/jeffrey.hellrung.tex
@@ -10,12 +10,8 @@
 
 {\large \textbf{Jeffrey Lee Hellrung, Jr.}}
 
-\vspace{-12pt}
-
-{\small
-2038 S Bentley Avenue \#302  \hfill \verb+jeffrey.hellrung@gmail.com+ \\
-Los Angeles, CA \ 90025-5699 \hfill (801) 920-8773
-}
+{\small \verb+jeffrey.hellrung@gmail.com+ \\
+\verb+http://www.linkedin.com/pub/jeffrey-hellrung/a/6b7/93a+}
 
 \vspace{8pt}
 
@@ -29,14 +25,14 @@ Los Angeles, CA \ 90025-5699 \hfill (801) 920-8773
 \setlength\VSEX{2pt}
 
 
-\begin{tabular}{@{}p{\CWa\columnwidth}@{}p{\CWb\columnwidth}@{}}
-{\small OBJECTIVE} &
-\begin{minipage}[t]{\CWb\columnwidth}
-\par Obtain an engineering position investigating software solutions to algorithmically challenging problems.
-\end{minipage}
-\end{tabular}
+% \begin{tabular}{@{}p{\CWa\columnwidth}@{}p{\CWb\columnwidth}@{}}
+% {\small OBJECTIVE} &
+% \begin{minipage}[t]{\CWb\columnwidth}
+% \par Obtain an engineering position investigating software solutions to algorithmically challenging problems.
+% \end{minipage}
+% \end{tabular}
 
-\vspace{\VS}
+% \vspace{\VS}
 
 % \begin{tabular}{@{}p{\CWa\columnwidth}@{}p{\CWb\columnwidth}@{}}
 % {\small RESEARCH} &
@@ -51,10 +47,44 @@ Los Angeles, CA \ 90025-5699 \hfill (801) 920-8773
 {\small SKILLS} &
 \begin{minipage}[t]{\CWb\columnwidth}
 \everypar={\hangindent=\HI}
-\par Proficient primarily in C{\tt ++}, but also familiar with a wide range of other programming languages, packages, and paradigms; including C, Java, \LaTeX, Matlab$^{\text{(R)}}$, MIPS assembly, ML/SML, Perl, Python, Qt 4, and Z80 assembly.
-\par Active member of the Boost C{\tt ++} open source community.
+\par Proficient primarily in Java and C{\tt ++}, but also familiar with a wide range of other programming languages, packages, and paradigms; including C, Go, \LaTeX, Matlab$^{\text{(R)}}$, MIPS assembly, ML/SML, Perl, Python, Qt 4, R, and Z80 assembly.
+\par Former active member of the Boost C{\tt ++} open source community.
 \par Adept at problem solving, as exemplified by placement in the ``Putnam exam'', Microsoft Imagine Cup Algorithm Invitational, ACM Programming Contest, ICFP Programming Contest, and Google Games.
 \par Solid computational mathematics and scientific computing background; mathematical modeling experience from clinic, research in reaction-diffusion PDEs, and the MCM.
+\end{minipage}
+\end{tabular}
+
+\vspace{\VS}
+
+\begin{tabular}{@{}p{\CWa\columnwidth}@{}p{\CWb\columnwidth}@{}}
+{\small EXPERIENCE} &
+\begin{minipage}[t]{\CWb\columnwidth}
+\par \textbf{Software Engineer at Google, Inc.}, Venice Beach, CA; December 2012 -- present. Member of the ``search lift''/``brand interest'' team, which measures ad effectiveness via Google search.
+\vspace{\VSEX}
+\par \textbf{Postdoctoral Appointee at Sandia National Laboratories}, Albuquerque, NM; fall 2012. Integrated a new efficient mesh duplication algorithm into SIERRA's XFEM framework to enable crack branding and merging. Conducted preliminary work in SSE/AVX vectorization of computationally intensive code paths within SIERRA.
+\vspace{\VSEX}
+\par \textbf{Teaching Fellow for Department of Mathematics}, UCLA, Los Angeles, CA; 2005 -- 2012. Led discussion sections to review lecture material, tutored at the Student Math Center, prepared review sessions before exams, and held office hours to provide students with additional help. %Classes include Math 32A, 32B, 33A, 33B, 132, 151A, 157, 269A (x3), 269B (x3); PIC 60.
+\vspace{\VSEX}
+\par \textbf{Park City Mathematics Institute}, Park City, UT; summer 2010. Teaching assistant for Professor Joseph Teran's week-long workshop on nonlinear elasticity.
+\vspace{\VSEX}
+\par \textbf{Walt Disney Animation Studios}, Burbank, CA; summer 2008. Created a Maya plugin front-end and developed the back-end algorithms to volumetrically fracture non-volumetric (i.e., quad surface) animation models.
+\vspace{\VSEX}
+\par \textbf{The Aerospace Corporation}, El Segundo, CA; summer 2005, 2006, 2007. Supported various programming projects relating to SOAP (Satellite Orbit Analysis Program) and SRE (Software Reliability Engineering). Created and modified existing code in C, C\texttt{++}, and Perl. Used Qt 4 to develop cross-platform graphical user interfaces in C\texttt{++}. Designed and prototyped several algorithms to solve satellite positioning problems.
+%\vspace{\VSEX}
+%\par \textbf{Clinic Project Manager serving Hewlett-Packard}, HMC, Claremont, CA; 2004 -- 2005. Headed a team of four to deliver to HP Labs several tools written in Matlab$^{\text{(R)}}$ to analyze and correct printer drift, as well as mid-year and final reports detailing our approaches. Presented our findings at Harvey Mudd College and directly to Hewlett-Packard in Palo Alto, CA.
+%\vspace{\VSEX}
+%\par \textbf{Auditude$^{\text{TM}}$, Inc.}, Los Angeles, CA; summer 2004. Constructed several test scripts to automate the execution, collection, and compilation of tests and their results, with the aim of optimizing the BroadcastID infrastructure. Wrote several technical summaries analyzing said results and recommending potential efficiency improvements.
+%\vspace{\VSEX}
+%\par \textbf{Research on Spatiotemporal Pattern Formation under Turing Instabilities}, HMC, Claremont, CA; summer 2003. Programmed and used several programs in Matlab$^{\text{(R)}}$ (totaling approximately 20,000 lines of code) to solve reaction-diffusion partial differential equations on growing 2-dimensional surfaces. Implemented and studied several different numerical integration schemes to solve these systems of PDEs.
+%\vspace{\VSEX}
+%\par \textbf{Academic Excellence Mathematics Tutor}, HMC, Claremont, CA; 2003 - 2005. Tutored students in linear algebra, differential equations, multivariable calculus, discrete mathematics; conducted workshops and exam review sessions.
+%\par \textbf{Computer Science 60 (Principles of Computer Science) ``Grutor''}, HMC, Claremont, CA; 2002 - 2005. Graded course assignments; tutored students on the principles of computer science.
+%\par \textbf{Mathematics 131 (Mathematical Analysis) Tutor}, HMC, Claremont, CA; spring 2004. Tutored students in real analysis.
+%\par \textbf{Mathematics 173 (Advanced Linear Algebra) Grader, HMC, Claremont, CA; spring 2005. Graded course assignments.
+%\par \textbf{Mathematics 055 (Discrete Mathematics) Grader/Tutor}, HMC, Claremont, CA; fall 2002. Graded course assignments; tutored students in discrete mathematics.
+%\par \textbf{Park City Mathematics Institute}, Park City, UT; summer 2003. Attended lectures on wavelets, partial differential equations, and Fourier analysis.
+%\par \textbf{Carpet Installer Assistant for R.C.\ Willey}, Riverdale, UT, summer 2002. Pulled up old carpet, padded, laid carpet, stretched, and trimmed.
+%\par \textbf{Summer Mathematics Camp}, University of Utah, Salt Lake City, UT, summer 2000. Studied number theory, graph theory, knot theory, geometry.
 \end{minipage}
 \end{tabular}
 
@@ -76,38 +106,6 @@ Graduated with High Distinction, Honors in Mathematics %\\
 %\par \textbf{Mathematics Coursework} : Abstract Algebra, Advanced Linear Algebra, Advanced Probability Theory, Analysis of Partial Differential Equations, Complex Variables and Integral Transforms, Discrete Mathematics, Differential Equations I/II, Dynamical Systems, Elementary Differential Geometry, Intermediate Probability Theory, Introduction to Probability and Statistics, Linear Algebra I/II, Mathematical Analysis I/II, Multivariable Calculus I/II, Putnam Seminar (4 sem), Seminar in Differential Geometry
 %\par \textbf{Computer Science Coursework} : Algorithms, Data Structures and Program Development, Logic for Computer Science, Principles of Computer Science, Programming Practicum (4 sem)
 %\par \textbf{Other Relevant Coursework} : (Advanced) General Chemistry, Advanced Placement Physics - Mechanics and Wave Motion, Digital Electronics and Computer Engineering, Electromagnetic Theory and Optics, Introduction to Biology, Introduction to Engineering Systems
-\end{minipage}
-\end{tabular}
-
-\vspace{\VS}
-
-\begin{tabular}{@{}p{\CWa\columnwidth}@{}p{\CWb\columnwidth}@{}}
-{\small EXPERIENCE} &
-\begin{minipage}[t]{\CWb\columnwidth}
-\par \textbf{Postdoctoral Appointee at Sandia National Laboratories}, Albuquerque, NM; fall 2012.
-\vspace{\VSEX}
-\par \textbf{Teaching Fellow for Department of Mathematics}, UCLA, Los Angeles, CA; 2005 -- 2012. Led discussion sections to review lecture material, tutored at the Student Math Center, prepared review sessions before exams, and held office hours to provide students with additional help. %Classes include Math 32A, 32B, 33A, 33B, 132, 151A, 157, 269A (x3), 269B (x3); PIC 60.
-\vspace{\VSEX}
-\par \textbf{Park City Mathematics Institute}, Park City, UT; summer 2010. Teaching assistant for Professor Joseph Teran's week-long workshop on nonlinear elasticity.
-\vspace{\VSEX}
-\par \textbf{Walt Disney Animation Studios}, Burbank, CA; summer 2008. Created a Maya plugin front-end and developed the back-end algorithms to volumetrically fracture non-volumetric (i.e., quad surface) animation models.
-\vspace{\VSEX}
-\par \textbf{The Aerospace Corporation}, El Segundo, CA; summer 2005, 2006, 2007. Supported various programming projects relating to SOAP (Satellite Orbit Analysis Program) and SRE (Software Reliability Engineering). Created and modified existing code in C, C\texttt{++}, and Perl. Used Qt 4 to develop cross-platform graphical user interfaces in C\texttt{++}. Designed and prototyped several algorithms to solve satellite positioning problems.
-\vspace{\VSEX}
-\par \textbf{Clinic Project Manager serving Hewlett-Packard}, HMC, Claremont, CA; 2004 -- 2005. Headed a team of four to deliver to HP Labs several tools written in Matlab$^{\text{(R)}}$ to analyze and correct printer drift, as well as mid-year and final reports detailing our approaches. Presented our findings at Harvey Mudd College and directly to Hewlett-Packard in Palo Alto, CA.
-\vspace{\VSEX}
-\par \textbf{Auditude$^{\text{TM}}$, Inc.}, Los Angeles, CA; summer 2004. Constructed several test scripts to automate the execution, collection, and compilation of tests and their results, with the aim of optimizing the BroadcastID infrastructure. Wrote several technical summaries analyzing said results and recommending potential efficiency improvements.
-\vspace{\VSEX}
-\par \textbf{Research on Spatiotemporal Pattern Formation under Turing Instabilities}, HMC, Claremont, CA; summer 2003. Programmed and used several programs in Matlab$^{\text{(R)}}$ (totaling approximately 20,000 lines of code) to solve reaction-diffusion partial differential equations on growing 2-dimensional surfaces. Implemented and studied several different numerical integration schemes to solve these systems of PDEs.
-\vspace{\VSEX}
-\par \textbf{Academic Excellence Mathematics Tutor}, HMC, Claremont, CA; 2003 - 2005. Tutored students in linear algebra, differential equations, multivariable calculus, discrete mathematics; conducted workshops and exam review sessions.
-%\par \textbf{Computer Science 60 (Principles of Computer Science) ``Grutor''}, HMC, Claremont, CA; 2002 - 2005. Graded course assignments; tutored students on the principles of computer science.
-%\par \textbf{Mathematics 131 (Mathematical Analysis) Tutor}, HMC, Claremont, CA; spring 2004. Tutored students in real analysis.
-%\par \textbf{Mathematics 173 (Advanced Linear Algebra) Grader, HMC, Claremont, CA; spring 2005. Graded course assignments.
-%\par \textbf{Mathematics 055 (Discrete Mathematics) Grader/Tutor}, HMC, Claremont, CA; fall 2002. Graded course assignments; tutored students in discrete mathematics.
-\par \textbf{Park City Mathematics Institute}, Park City, UT; summer 2003. Attended lectures on wavelets, partial differential equations, and Fourier analysis.
-%\par \textbf{Carpet Installer Assistant for R.C.\ Willey}, Riverdale, UT, summer 2002. Pulled up old carpet, padded, laid carpet, stretched, and trimmed.
-%\par \textbf{Summer Mathematics Camp}, University of Utah, Salt Lake City, UT, summer 2000. Studied number theory, graph theory, knot theory, geometry.
 \end{minipage}
 \end{tabular}
 
